# exchange_rate_scraper

./: .gitignore  README.md  daily_aud_rate_scraper.py  daily_eur_rate_scraper.py  daily_gbp_rate_scraper.py  daily_usd_rate_scraper.py  each_bank_extractor.py  exchange_rate_scraper.py  pyproject.toml  requirements.txt
.github/workflows/: daily-scraper.yml  daily_aud_rate_scraper.yml  daily_aud_scraper.yml  daily_aud_usd_euro_gbp_rate_scraper.yml  daily_aud_usd_euro_rate_scraper.yml  daily_aud_usd_rate_scraper.yml  daily_euro_rate_scraper.yml  daily_gbp_rate_scraper.yml  daily_usd_rate_scraper.yml
